base/emailsvc-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-svc
  namespace: emailsvc-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: email-svc
  template:
    metadata:
      labels:
        app: email-svc
    spec:
      serviceAccountName: emailsvc-sa
      nodeSelector:
        cloud.google.com/gke-nodepool: eh-qa-vkmr-node-pool
      containers:
        - name: email-svc
          image: IMAGE_PATH:__IMAGE_TAG__
          ports:
            - containerPort: 8093
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
