base/emailsvc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-svc
  namespace: emailsvc-ns
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  selector:
    app: email-svc
  ports:
    - name: email
      port: 8093
      targetPort: 8093
