base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dicom-internal-ingress
  namespace: dicomproxysvc-ns
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
    kubernetes.io/ingress.regional-static-ip-name: dicom-proxy-svc-ip

spec:

  tls:
    - hosts:
        - qa-dicom-proxy.nsdev.tech
      secretName: proxy-tls

  rules:
    - host: qa-dicom-proxy.nsdev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dicom-proxy-svc
                port:
                  number: 8080
